# minicc

./: .env.example  .git-commit-msg.txt  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  Makefile  README.md  atlas.hcl  cleanup.py  docker-compose.yml  go.mod  go.sum  minicc_history.db  plugins.json  reasonix.toml  run.py  skills-lock.json
backend/: Dockerfile  minicc_history.db  minicc_platform.db  pyproject.toml  test_hello.py
backend/.minicc/.backup/: test_hello.py.20260630_023722.bak
backend/app/: __init__.py  main.py  platform.py  trace.py
backend/app/agents/: code_agent.py  router.py  session.py
backend/app/agi/: __init__.py
backend/app/automator/: __init__.py  dsl.py  recorder.py  scheduler.py  variables.py  workflow.py
backend/app/brain/: __init__.py
backend/app/civilization/: __init__.py
backend/app/collab/: __init__.py
backend/app/commands/: __init__.py  core.py
backend/app/core/: context_builder.py  events.py  extensions.py  lsp_client.py  mcp_client.py  permission.py  plugin_loader.py  protocol.py
backend/app/cosmic/: __init__.py
backend/app/crm/: __init__.py
backend/app/devops/: __init__.py
backend/app/engine/: compactor.py  llm_provider.py  query_engine.py  session.py  task_manager.py
backend/app/erp/: __init__.py
backend/app/evolve/: __init__.py
backend/app/graph/: checkpoint.py  executor.py  graph.py  streaming.py  tools.py
backend/app/heal/: __init__.py
backend/app/humanity/: __init__.py
backend/app/interstellar/: __init__.py
backend/app/learn/: __init__.py
backend/app/legacy/: __init__.py
backend/app/models/: chat.py  permission.py  session.py  tool.py
backend/app/ops/: __init__.py
backend/app/optimizer/: __init__.py  v03.py  v04_v07.py
backend/app/pm/: __init__.py
backend/app/rag/: chunker.py  embedder.py  loader.py  retriever.py  vector_store.py
backend/app/self/: __init__.py
backend/app/support/: __init__.py
backend/app/symbiosis/: __init__.py
backend/app/tools/: agent_tools.py  base.py  batch_edit.py  codegraph.py  debugger.py  editor_actions.py  editor_api.py  editor_sync.py  extras.py  file_system.py  git_workflow.py  memory_tools.py  physical_tools.py  rag_tools.py  search_tools.py  (+6 more)
backend/tests/: conftest.py  test_agent_tools.py  test_compactor.py  test_context_builder.py  test_extensions.py  test_file_system.py  test_models.py  test_permission.py  test_protocol.py  test_query_engine.py  test_session.py  test_shell_executor.py
python-engine/: Dockerfile  pyproject.toml  requirements.txt
python-engine/app/: __init__.py  config.py  db.py  http_server.py  main.py  session_store.py
python-engine/tests/: __init__.py  test_agent.py  test_commands.py  test_context.py  test_engine.py  test_knowledge.py  test_memory.py  test_multi_agent.py  test_prompt_engine.py  test_rag.py  test_tools_local.py  test_tools_service_api.py
(+562 files in other folders)
